--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1",
     "react-select": "3.0.8",
-    "react-sticky-mouse-tooltip": "0.0.1"
+    "react-sticky-mouse-tooltip": "0.0.1",
+    "redis": "3.0.2"
   },
   "devDependencies": {
     "typescript": "3.3.3"
